--- a/sub_form.html
+++ b/sub_form.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrap">
         <!-- container -->
-        <div id="container">
+        <div class="container" id="container">
             <div class="title_wrap">
                 <section class="title_item">
                     <div class="title">
