--- a/complete1.html
+++ b/complete1.html
@@ -21,7 +21,7 @@
                         <strong><span>신청이 정상적으로</span> <span>완료되었습니다.</span></strong>
                         <p><span>작성하신 메일로 <em>8월 10일</em>에 채팅+ PC 버전 </span><span>베타 프로그램 파일을 전달드리겠습니다.</span></p>
                     </div>
-                    <div class="btn_area btn_area_max">
+                    <div class="btn_area">
                         <div class="btn blue_btn">
                             <a href="#">홈으로 돌아가기</a>
                         </div>
